--- a/src/app.css
+++ b/src/app.css
@@ -16,4 +16,15 @@
     flex-direction: column;
     align-items: center;
   }
+
+  @media (max-width: 720px) {
+    margin: 1rem 0;
+  }
+
+  @media (max-width: 512px) {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    border-radius: 0;
+  }
 }
