--- a/src/components/AddTaskBar/addTaskBar.css
+++ b/src/components/AddTaskBar/addTaskBar.css
@@ -48,14 +48,13 @@
 
   & .form__btns {
     width: 100%;
-    height: 2.5rem;
-    display: grid;
-    grid-template-columns: .3fr .7fr;
+    min-height: 2.5rem;
+    display: flex;
     gap: 1rem;
 
     & button {
       font-weight: bold;
-      height: 100%;
+      padding: .5rem 1rem;
       background-color: var(--secondary-c);
       color: var(--dark-c);
       border-radius: 8px;
@@ -63,6 +62,12 @@
 
       &:hover:not(:disabled) {
         background-color: var(--secondary-low-c);
+      }
+
+      @media (max-width: 720px) {
+        &:hover:not(:disabled) {
+          background-color: var(--secondary-c);
+        }
       }
 
       &:disabled {
