--- a/src/components/TasksLists/tasksList.css
+++ b/src/components/TasksLists/tasksList.css
@@ -16,6 +16,23 @@
     margin-top: 2rem;
     display: flex;
     flex-direction: column;
-    gap: .5rem;
+    gap: 0.5rem;
+  }
+}
+
+#completed-tasks-list {
+  & .tasks-list__title {
+    @media (max-width: 360px) {
+      & h2 {
+        display: flex;
+        flex-direction: column;
+      }
+    }
+  }
+
+  @media (max-width: 360px) {
+    & .tasks-list__tasks {
+      margin-top: 5rem;
+    }
   }
 }
