--- a/src/main.css
+++ b/src/main.css
@@ -31,9 +31,12 @@
 
 html {
   font-size: 16px;
+  min-height: 100vh;
+  overscroll-behavior-y: none;
 
   & body {
-    min-height: 100vh;
+    width: 100%;
+    height: 100%;
     background: rgb(0, 0, 0);
     background: -moz-linear-gradient(
       300deg,
@@ -53,6 +56,11 @@ html {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#1f233c",GradientType=1);
     display: grid;
     place-items: center;
+    overflow-x: hidden;
+
+    @media (max-width: 512px) {
+      display: block;
+    }
   }
 }
 
