--- a/src/app.css
+++ b/src/app.css
@@ -23,7 +23,7 @@
 
   @media (max-width: 512px) {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     margin: 0;
     border-radius: 0;
   }
